--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-  <img src="qr-code-privacy.png" alt="QR Code Privacy">
+  <img src="https://salvatorecapolupo.github.io/privacy/qr-code-privacy.png" alt="QR Code Privacy">
   <h1 class="text-center typewriter">Analisi Fingerprint del Tuo Browser</h1>
   <div id="infoContainer" class="mt-4"></div>
   <div id="fingerprint" class="text-center"></div>
