--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 </head>
 <body>
   <div class="container">
+    <img src="//salvatorecapolupo.github.io/privacy/qr-code-privacy.png" class="img-fluid"/>
     <h1>Fingerprint & Privacy</h1>
     <p>Questa pagina raccoglie e mostra alcuni dati relativi al tuo dispositivo, come il tuo agente utente, la risoluzione dello schermo, la lingua, il sistema operativo, e altri parametri. L'obiettivo è generare un'impronta digitale unica per il tuo dispositivo, utilizzando queste informazioni per creare un "fingerprint" (impronta digitale) che viene poi visualizzato in formato hash (SHA-256). Questo tipo di identificazione può essere utilizzato per scopi legati alla privacy e alla sicurezza online.</p>
     <div id="infoContainer"></div>
